--- a/Tempore/TemporeApp/templates/base.html
+++ b/Tempore/TemporeApp/templates/base.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
           integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    {% load static %}
+    <link href="{% static 'staticPage/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
+    <!-- Custom fonts for this template -->
+    <link href="{% static 'staticPage/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="{% static 'staticPage/css/grayscale.min.css' %}" rel="stylesheet">
+
     <link rel="stylesheet" href="{% static 'staticPage/style.css' %}" type="text/css">
     {% block head %}
     <meta charset="UTF-8">
