--- a/Tempore/TemporeApp/templates/registration/login.html
+++ b/Tempore/TemporeApp/templates/registration/login.html
@@ -2,16 +2,29 @@
 
 {%block head%}
 <title>Login</title>
+
 {% endblock%}
 
 {% block body%}
-<h2>Login</h2>
-<form method="post">
-    <div class="container">
+<body class="text-center" style>
+
+        <form method="post" action="{% url 'login' %}" class="form-signin">
             {% csrf_token %}
-            {{ form.as_p}}
-        <button type="submit" class="btn btn-primary">Login</button>
-    </div>
-</form>
+            <label for="{{ form.username.id_for_label }}">Username</label>
+           {{ form.username }}
+
+            <label for="{{ form.password.id_for_label }}">Password</label>
+            {{ form.password }}
+
+            <!--{{ form.username.label_tag }}-->
+            <!--{{ form.username }}-->
+            <!--{{ form.password.label_tag }}-->
+            <!--{{ form.password }}-->
+
+            <input type="submit" value="login" />
+            <input type="hidden" name="next" value="{{ next }}" />
+        </form>
+
+</body>
 {% endblock %}
 
