--- a/Tempore/TemporeApp/templates/registration/login.html
+++ b/Tempore/TemporeApp/templates/registration/login.html
@@ -50,17 +50,23 @@
                                     <td>{{ form.password }}</td>
                                 </tr>
 
-                            </table>
-                                <a class="btn btn-dark btn-lg" type="submit">Sign in</a>
+        <form method="post" action="{% url 'login' %}" class="form-signin">
+            {% csrf_token %}
+            <label for="{{ form.username.id_for_label }}">Username</label>
+           {{ form.username }}
 
-                            <!--<input class="btn btn-dark" type="submit" value="login" /></div>-->
-                            <!--<input type="hidden" name="next" value="{{ next }}" />-->
-                        </form>
-                        <p><a class="text-dark align-text-bottom" href="{% url 'password_reset' %}">Lost password?</a></p>
-                </div>
-            </div>
-        </div>
-    </header>
+            <label for="{{ form.password.id_for_label }}">Password</label>
+            {{ form.password }}
+
+            <!--{{ form.username.label_tag }}-->
+            <!--{{ form.username }}-->
+            <!--{{ form.password.label_tag }}-->
+            <!--{{ form.password }}-->
+
+            <input type="submit" value="login" />
+            <input type="hidden" name="next" value="{{ next }}" />
+        </form>
+
 </body>
 {% endblock %}
 
