--- a/Tempore/TemporeApp/templates/registration/login.html
+++ b/Tempore/TemporeApp/templates/registration/login.html
@@ -12,7 +12,7 @@
     <header class="masthead">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Tempore</a>
+        <a class="navbar-brand js-scroll-trigger" href="{%url 'home'%}">Tempore</a>
         <button class="navbar-toggler navbar-toggler-right" type="button"
                 data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation">
@@ -51,12 +51,9 @@
                                 </tr>
 
                             </table>
-                                <a class="btn btn-dark btn-lg" type="submit">Sign in</a>
-
-                            <!--<input class="btn btn-dark" type="submit" value="login" /></div>-->
-                            <!--<input type="hidden" name="next" value="{{ next }}" />-->
-                        </form>
-                        <p><a class="text-dark align-text-bottom" href="{% url 'password_reset' %}">Lost password?</a></p>
+                                <button class="btn btn-dark btn-lg" type="submit">Sign in</button>
+                    </form>
+                    <p><a class="text-dark align-text-bottom" href="{% url 'password_reset' %}">Lost password?</a></p>
                 </div>
             </div>
         </div>
