--- a/Tempore/TemporeApp/templates/index.html
+++ b/Tempore/TemporeApp/templates/index.html
@@ -23,7 +23,7 @@
   </head>
 
   <body id="page-top">
-  {% if user.is_authenticated %}
+  {% if User.is_authenticated %}
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">Tempore</a>
@@ -80,7 +80,7 @@
         <div class="mx-auto text-center">
           <h1 class="mx-auto my-0 text-uppercase">Tempore</h1>
           <div class="badge badge-dark text-wrap mb-2 ">
-            {% if user.is_authenticated %}
+            {% if User.is_authenticated %}
             <h2 class="text-white-50 mx-auto mt-2 mb-2">Welcome {{user.username}}</h2>
             {% else %}
             <h2 class="text-white-50 mx-auto mt-2 mb-2">A responsive service to help you get to school</h2>
