Revert "Need to fix some shit"
This reverts commit 39f844580b9981e3c48517ab4f46a58055e8ea2a.

--- a/Tempore/TemporeApp/templates/registration/login.html
+++ b/Tempore/TemporeApp/templates/registration/login.html
@@ -22,7 +22,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="{% url 'home'%}">Home</a>
+              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="{% url 'logout'%}">Logout</a>
             </li>
             <li class="nav-item">
             </li>
