--- a/Tempore/TemporeApp/templates/registration/login.html
+++ b/Tempore/TemporeApp/templates/registration/login.html
@@ -25,7 +25,7 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="{% url 'logout'%}">Logout</a>
+              <a class="nav-link js-scroll-trigger" href="{% url 'home'%}">Home</a>
             </li>
             <li class="nav-item">
             </li>
