--- a/Tempore/TemporeApp/templates/index.html
+++ b/Tempore/TemporeApp/templates/index.html
@@ -24,7 +24,7 @@
 
   <body id="page-top">
   {% if user.is_authenticated %}
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">Tempore</a>
         <button class="navbar-toggler navbar-toggler-right" type="button"
@@ -41,12 +41,22 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="{% url 'logout'%}">Logout</a>
             </li>
+
+            {% if user.is_staff %}
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="{% url 'profile'%}">Dashboard</a>
             </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="{% url 'profile'%}">Profile</a>
+            </li>
+            {% endif %}
           </ul>
         </div>
       </div>
     </nav>
+
+
   {% else %}
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
