--- a/Tempore/TemporeApp/templates/index.html
+++ b/Tempore/TemporeApp/templates/index.html
@@ -44,11 +44,14 @@
 
             {% if user.is_staff %}
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="{% url 'profile'%}">Dashboard</a>
+              <a class="nav-link js-scroll-trigger" href="admin/">Dashboard</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="{% url 'view_profile'%}">Profile</a>
             </li>
             {% else %}
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="{% url 'profile'%}">Profile</a>
+              <a class="nav-link js-scroll-trigger" href="{% url 'view_profile'%}">Profile</a>
             </li>
             {% endif %}
           </ul>
