--- a/Tempore/TemporeApp/templates/index.html
+++ b/Tempore/TemporeApp/templates/index.html
@@ -23,8 +23,8 @@
   </head>
 
   <body id="page-top">
-  {% if User.is_authenticated %}
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+  {% if user.is_authenticated %}
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">Tempore</a>
         <button class="navbar-toggler navbar-toggler-right" type="button"
@@ -41,12 +41,22 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="{% url 'logout'%}">Logout</a>
             </li>
+
+            {% if user.is_staff %}
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="{% url 'profile'%}">Dashboard</a>
             </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="{% url 'profile'%}">Profile</a>
+            </li>
+            {% endif %}
           </ul>
         </div>
       </div>
     </nav>
+
+
   {% else %}
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
@@ -80,7 +90,7 @@
         <div class="mx-auto text-center">
           <h1 class="mx-auto my-0 text-uppercase">Tempore</h1>
           <div class="badge badge-dark text-wrap mb-2 ">
-            {% if User.is_authenticated %}
+            {% if user.is_authenticated %}
             <h2 class="text-white-50 mx-auto mt-2 mb-2">Welcome {{user.username}}</h2>
             {% else %}
             <h2 class="text-white-50 mx-auto mt-2 mb-2">A responsive service to help you get to school</h2>
