--- a/Tempore/TemporeApp/templates/registration/profile.html
+++ b/Tempore/TemporeApp/templates/registration/profile.html
@@ -1,16 +1,16 @@
 {% extends 'base.html'%}
-
 {%block head%}
 <title>{{ user.first_name }}</title>
 
 {% endblock%}
 
-{% block body %}
+{%block body%}
 <div class="container">
-    <p></p>
+    <h1>Profile</h1>
     <p>Username: {{ user }}</p>
     <p>First name: {{ user.first_name }}</p>
     <p>Last name: {{ user.last_name }}</p>
     <p>Email: {{ user.email }}</p>
+
 </div>
 {% endblock%}
