Auto stash before merge of "master" and "origin/master"

--- a/Tempore/TemporeApp/templates/registration/profile.html
+++ b/Tempore/TemporeApp/templates/registration/profile.html
@@ -39,7 +39,7 @@
                 url:'http://127.0.0.1:8000/person/',
                 type:"POST",
                 dataType:"json",
-                data:$("#person").serialize(),
+                data:$("#person"),
                 success: function(result){
                     console.log(result);
                 },
