--- a/TemporeApp/templates/registration/profile.html
+++ b/TemporeApp/templates/registration/profile.html
@@ -43,7 +43,7 @@
     $(document).ready(function(){
         $("#submit").on('click', function(){
             $.ajax({
-                url:'http://127.0.0.1:8000/person/',
+                url:'/person/',
                 type:"POST",
                 dataType:"json",
                 data:$("#person").serialize(),
