--- a/TemporeApp/templates/registration/profile.html
+++ b/TemporeApp/templates/registration/profile.html
@@ -1,6 +1,8 @@
 {% extends 'base.html'%}
 {%block head%}
 <title>{{ user.first_name }}</title>
+<link rel="shortcut icon" href="{% static 'staticPage/img/tempore_icon.jpg' %}">
+
 {% endblock%}
 
 {%block body%}
