--- a/TemporeApp/templates/registration/profile.html
+++ b/TemporeApp/templates/registration/profile.html
@@ -1,17 +1,17 @@
 {% extends 'base.html'%}
 {%block head%}
 <title>{{ user.first_name }}</title>
-<link rel="shortcut icon" href="{% static 'staticPage/img/tempore_icon.jpg' %}">
 
 {% endblock%}
 
 {%block body%}
 <div class="masthead">
-    <div class="container">
-        <div class="row pt-4">
+
+    <div class="d-flex p-2">
+    <h1>Profile</h1>
+        <div class="row pt-3">
            <!--Profile info-->
-            <h1>Profile</h1>
-            <div class="col-sm">
+            <div class="col">
                 <p class="text-white">Username: {{ user }}</p>
                 <p class="text-white">First name: {{ user.first_name }}</p>
                 <p class="text-white">Last name: {{ user.last_name }}</p>
@@ -19,7 +19,7 @@
                 <a href="{% url 'edit_profile'%}" class="btn btn-success js-scroll-trigger">Edit Profile</a>
             </div>
             <!--Travel Form-->
-            <div class="col-sm">
+            <div class="col">
                 <form id="person" action="" method="post">
                     <div class="text-white">
                         <div class="form-group">
@@ -29,7 +29,7 @@
                             <input id="Email" type="email" name="email" class="form-control"><br>
                             <label for="Address">Adress och ort :</label>
                             <input id="Address" type="text" name="address" class="form-control"><br>
-                            <h3 class="text-white">The the you start in the morning</h3>
+                            <h3 class="text-white">The time you start in the morning</h3>
                             <label for="id1">Mon:</label>
                             <input id="id1" type="time" name="1" class="form-control input-sm"><br>
                             <label for="id2">Tue:</label>
@@ -46,7 +46,7 @@
                 </form>
             </div>
             <!--Travel Response-->
-            <div class="col-sm">
+            <div class="col">
                 <ul class="list-group-transparent ">
                     <li class="list-group-item d-flex flex-column justify-content-center align-self-start" id="0">
                     </li>
@@ -63,6 +63,25 @@
 
                 </ul>
             </div>
+            <div class="row">
+                <!--Travel Status Response -->
+                <div class="col">
+                    <ul class="list-group-transparent ">
+                        <li class="list-group-item d-flex flex-column justify-content-center align-self-start" id="10">
+                        </li>
+                        <li class="list-group-item d-flex flex-column justify-content-center align-self-start" id="11">
+                        </li>
+                        <li class="list-group-item d-flex flex-column justify-content-center align-self-start" id="12">
+                        </li>
+                        <li class="list-group-item d-flex flex-column justify-content-center align-self-start" id="13">
+                        </li>
+                        <li class="list-group-item d-flex flex-column justify-content-center align-self-start" id="14">
+                        </li>
+                        <li class="list-group-item d-flex flex-column justify-content-center align-self-start " id="15">
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -71,6 +90,31 @@
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
 <script>
     $(document).ready(function(){
+        $.ajax({
+            url:'/status/',
+            type:'GET',
+            success: function(result){
+                console.log(result);
+                var travelStatusResponse = result.ResponseData.TrafficTypes;
+                var InfoList= '<li class="list-group-item list-group-item-success" id="infolist0"></li>';
+                var EventGood = '<span class="badge badge-success" id="EventGood0"></span>';
+                var EventBad = '<span class="badge badge-danger" id="EventBad0"></span>';
+                for (var i = 0; i < travelStatusResponse.length; i++) {
+                    var InfoListChanger = InfoList.replace('infolist0', 'infolist'+i);
+                    var EventGoodChanger = EventGood.replace('EventGood0', 'EventGood'+i);
+                    var EventBadChanger = EventGood.replace('EventBad0', 'EventBad'+i);
+                    y=i+10;
+                    if(travelStatusResponse[i].Events.length){
+                        $("#"+y).html(travelStatusResponse[i].Name+EventGoodChanger);
+                        $("#EventGood"+i).html(travelStatusResponse[i].Events[0].Message);
+                    }else{
+                        $("#"+y).html(travelStatusResponse[i].Name+EventBadChanger);
+                        $("#EventBad"+i).html(travelStatusResponse[i].Events[0].Message+travelStatusResponse[i].Events[0].TrafficLine);
+                    }
+
+                }
+            }
+        });
         $("#submit").on('click', function(){
             $.ajax({
                 url:'/person/',
