--- a/TemporeApp/templates/registration/profile.html
+++ b/TemporeApp/templates/registration/profile.html
@@ -6,10 +6,17 @@
 
 {%block body%}
 <div class="masthead">
+
     <div class="d-flex p-2">
+
+        <div class="row pt-3">
            <!--Profile info-->
             <div class="col">
-                <h1>Trip</h1>
+                <!--<p class="text-white">Username: {{ user }}</p>-->
+                <!--<p class="text-white">First name: {{ user.first_name }}</p>-->
+                <!--<p class="text-white">Last name: {{ user.last_name }}</p>-->
+                <!--<p class="text-white">Email: {{ user.email }}</p>-->
+                <h1>Profile</h1>
                 <a href="{% url 'edit_profile'%}" class="btn btn-success js-scroll-trigger">Edit Profile</a>
             </div>
             <!--Travel Form-->
@@ -24,7 +31,6 @@
                             <label for="Address">Adress och ort :</label>
                             <input id="Address" type="text" name="address" class="form-control"><br>
                             <h3 class="text-white">The time you start in the morning</h3>
-                            <div class="col">
                             <label for="id1">Mon:</label>
                             <input id="id1" type="time" name="1" class="form-control"><br>
                             <label for="id2">Tue:</label>
@@ -35,7 +41,6 @@
                             <input id="id4" type="time" name="4" class="form-control"><br>
                             <label for="id5">Fri:</label>
                             <input id="id5" type="time" name="5" class="form-control"><br>
-                        </div>
                         </div>
                     </div>
                     <input id="submit" type="button" name="submit" value="submit" class="btn btn-success js-scroll-trigger">
@@ -93,19 +98,19 @@
                 console.log(result);
                 var travelStatusResponse = result.ResponseData.TrafficTypes;
                 var InfoList= '<li class="list-group-item list-group-item-success" id="infolist0"></li>';
-                var EventGood = '<span class="badge badge-success" id="EventGood0"></span>';
-                var EventBad = '<span class="badge badge-danger" id="EventBad0"></span>';
+                var Event = '<span class="badge badge-success" id="Event"></span>';
                 for (var i = 0; i < travelStatusResponse.length; i++) {
                     var InfoListChanger = InfoList.replace('infolist0', 'infolist'+i);
-                    var EventGoodChanger = EventGood.replace('EventGood0', 'EventGood'+i);
-                    var EventBadChanger = EventGood.replace('EventBad0', 'EventBad'+i);
+                    var EventChanger = Event.replace('Event', 'Event'+i);
                     y=i+10;
+                    //$("#"+y).html(travelStatusResponse[i].Name+EventChanger);
                     if(travelStatusResponse[i].Events.length <= 1){
-                        $("#"+y).html(travelStatusResponse[i].Name+EventGoodChanger);
-                        $("#EventGood"+i).html(travelStatusResponse[i].Events[0].Message);
+                        $("#"+y).html(travelStatusResponse[i].Name+EventChanger);
+                        $("#Event"+i).html(travelStatusResponse[i].Events[0].Message);
                     }else{
-                        $("#"+y).html(travelStatusResponse[i].Name+EventBad);
-                        $("#EventBad"+i).text('Störning i Trafiken kolla på Sl.se ');
+                        var EventChangerDanger = EventChanger.replace('success', 'danger');
+                        $("#"+y).html(travelStatusResponse[i].Name+EventChangerDanger);
+                        $("#Event"+i).text("Störning i trafiken. Kolla på Sl.se");
                     }
 
                 }
