Added a function that will change to the next days travel plan after a certain time

--- a/TemporeApp/templates/registration/profile.html
+++ b/TemporeApp/templates/registration/profile.html
@@ -16,8 +16,8 @@
                 <!--<p class="text-white">First name: {{ user.first_name }}</p>-->
                 <!--<p class="text-white">Last name: {{ user.last_name }}</p>-->
                 <!--<p class="text-white">Email: {{ user.email }}</p>-->
-                <h1>Profile</h1>
-                <a href="{% url 'edit_profile'%}" class="btn btn-success js-scroll-trigger">Edit Profile</a>
+                <h1>Travel</h1>
+                <a href="{% url 'edit_profile'%}" class="btn btn-sm btn-success  ">Edit Profile</a>
             </div>
             <!--Travel Form-->
             <div class="col">
